# cmake

./: README.md
day1/: CMakeLists.txt  add.cpp  main.cpp  readme.txt
day10/: CMakeLists.txt  readme.txt
day10/example/: main.cpp
day10/java/src/: FaceInfo.java  Test.java
day10/java/src/com/renren/face/: FaceInterface.java
day10/src/add/: add.cpp
day10/src/java_interface/: com_renren_face_FaceInterface.cpp  com_renren_face_FaceInterface.h
day10/src/sum/: sum.cpp
day11/: readme.txt
day11/java/src/: FaceInfo.java  Test.java  run.sh
day11/java/src/com/renren/face/: FaceInterface.java
day11/src/java_interface/: com_renren_face_FaceInterface.cpp  com_renren_face_FaceInterface.h
day12/: CMakeLists.txt  readme.txt
day12/java/src/: run.sh
day12/src/java_interface/: com_renren_face_FaceInterface.cpp
day13/: CMakeLists.txt  readme.txt
day13/java/src/: run.sh
day13/src/java_interface/: com_renren_face_FaceInterface.cpp
day14/: CMakeLists.txt  build_for_android.sh  readme.txt
day14/example/: CMakeLists.txt
day14/java/src/: Test.java  run.sh
day14/java/src/com/renren/face/: FaceInfo.java  FaceInterface.java
day14/src/java_interface/: com_renren_face_FaceInterface.h
day15-16/: DemoTest.rar
day2/: CMakeLists.txt  readme.txt
day3/: CMakeLists.txt  readme.txt
day3/src/sum/: sum.cpp
day3/test/: CMakeLists.txt
day4/: CMakeLists.txt  readme.txt
day4/example/: CMakeLists.txt
day4/src/add/: add.cpp
day5/: CMakeLists.txt  main.cpp  readme.txt  readme.txt.bak
day6/: CMakeLists.txt  main.cpp  myLog.cpp  myLog.h  readme.txt
day7/: CMakeLists.txt  readme.txt
day7/src/sum/: sum.h
day8/: readme.txt
day8/java/src/: Test.java
day9/: readme.txt
day9/java/src/: FaceInfo.java  Test.java
